# openvoice.streaming.server

./: .gitignore  .gitmodules  Dockerfile  License  pyproject.toml
src/openvoice/: api.py  attentions.py  commons.py  mel_processing.py  models.py  modules.py  openvoice_app.py  se_extractor.py  utils.py
src/openvoice_streaming_server/: api.py  main.py
src/openvoice_streaming_server/core/: settings.py
src/openvoice_streaming_server/core/libs/: __init__.py  model.py
src/openvoice_streaming_server/core/schemas/: __init__.py  synthesize_schema.py
src/openvoice_streaming_server/openvoice/: __init__.py  base_speaker_tts.py
src/openvoice_streaming_server/openvoice_stream/: __init__.py  base_speaker_tts.py
src/openvoice_streaming_server/routers/: synthesize.py
src/openvoice_streaming_server/v1/: api.py
src/openvoice_streaming_server/v1/endpoints/: synthesize.py
templates/: audio_streaming.py  llm_streaming.py
test_server/: test_server.py
