[tool.poetry]
name = "openvoice-streaming-server"
version = "0.1.0"
description = ""
authors = ["Arun <prakaasharun50@gmail.com>"]
readme = "README.md"
packages = [{include = "openvoice"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
torch = {version = "^2.2.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
torchvision = {version = "^0.17.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
torchaudio = {version = "^2.2.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
librosa = "0.9.1"

[tool.poetry.extras]
cuda = []

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
