[tool.poetry]
name = "openvoice-streaming-server"
version = "0.1.0"
description = ""
authors = ["Arun <prakaasharun50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
torch = {version = "^2.2.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
torchvision = {version = "^0.17.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
torchaudio = {version = "^2.2.0", source = "pytorch-cu118", markers = "extra =='cuda'"}
librosa = "0.9.1"
faster-whisper = "0.9.0"
pydub = "0.25.1"
wavmark = "^0.0.3"
eng-to-ipa = "0.0.2"
uvicorn = "^0.27.1"
inflect = "7.0.0"
unidecode = "1.3.7"
whisper-timestamped = "1.14.2"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pypinyin = "0.50.0"
cn2an = "0.5.22"
jieba = "0.42.1"
gradio = "3.48.0"
langid = "1.1.6"
pydantic-settings = "^2.2.1"
pytest = "^8.0.1"

[tool.poetry.extras]
cuda = []

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
